Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </ul>
       </header>
       <section>
-        <p>Coming soon, I swear.</p>
+        <p>From the good people who brought you <a href="http://IsThereACubsGameToday.com">IsThereACubsGameToday.com</a>
+Coming soon, I swear.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/isthereagametoday">isthereagametoday</a></p>
